src/main/metadata-au/objects/Lead__c.object
<CustomObject>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Financed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM1 Existing Contract No.</label>
        <referenceTo>Retail_Task__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_To_MB_Call_Center__c</fullName>
        <label>Feedback To MB Call Center</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_Amount__c</fullName>
        <formula>Existing_Contract__r.Amount_Financed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Product2__c</fullName>
        <label>Financial Product</label>
        <picklist>
            <picklistValues>
                <fullName>Finance Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hire Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Maintained Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Product__c</fullName>
        <formula>TEXT(Existing_Contract__r.Finance_Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Contact_Customer_Date_Time__c</fullName>
        <label>First Contact Customer Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Contact_Customer_Date__c</fullName>
        <label>First Contact Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fleet_Dealer__c</fullName>
        <label>Fleet Dealer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT(Contact__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>IF( 
ISBLANK(Contact__c), 
Company_Account__r.PersonHomePhone , 
Collectioner_Name__r.HomePhone
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MBDA_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <formula>Existing_Contract__r.Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested_Body_Type__c</fullName>
        <label>Interested Body Type</label>
        <picklist>
            <picklistValues>
                <fullName>mini car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mpv/van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>wagon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retail_Interested_Vehicle_Brand__c</fullName>
        <label>Retail Interested Vehicle Brand</label>
        <picklist>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_Vehicle_Category__c</fullName>
        <label>Interested Vehicle Category</label>
        <picklist>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_Vehicle_Class__c</fullName>
        <label>Interested Vehicle Class</label>
        <picklist>
            <controllingField>Interested_Vehicle_Brand__c</controllingField>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Sport Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E coupe sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G55 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G65 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S65 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL63 AMG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_Vehicle_Colour__c</fullName>
        <label>Interested Vehicle Colour</label>
        <picklist>
            <picklistValues>
                <fullName>40 Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>104 Cashmere yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>108 Grey reef</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>112 Paint, chromite black , metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170 Paint , columbium iron black , metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>182 Garnet black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>189 Dark green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>197 Obsidian Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>288 Basalt gray nappa leather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 Magnesiowustite malachite green , metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345 Dark blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>347 Blue Chalcedony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>349 Lapis blue metallic color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>353 Ore Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>354 Paint , carnelian red , metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>357 Luo Lite Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>359 Sapphire blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>368 Flint Grey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>370 Sulfur with lime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>474 Jewel Brown metallic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>480 Asbestos-Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>487 Placer gold Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>492 Paint，Rutile-Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>494 Paint，Germanium-lime，Metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5353 Paint，Tin-lead-blue，Metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5359 Paint，Sapphire blue，Metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>541 East Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>544 Jade Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>548 Amber red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>555 Sahara beige/Black Featured leather</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
	<fields>
        <fullName>Interested_Vehicle_Interior_Color__c</fullName>
        <label>Interested Vehicle Interior Color</label>
        <picklist>
            <controllingField>Interested_Vehicle_Brand__c</controllingField>
            <picklistValues>
                <fullName>Design Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Beige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fabric Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leather Brabus Special Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Leather upholstery kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRABUS Leather upholstery kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crystal Grey Leather upholstery kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Red Leather upholstery kits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_Vehicle_Model__c</fullName>
        <label>Interested Vehicle Model</label>
        <picklist>
            <controllingField>Interested_Vehicle_Class__c</controllingField>
            <picklistValues>
                <fullName>A160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 180 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 200 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 260 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B180 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Sports Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 luxury model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C180K Classic (CKD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C180K Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 180 Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 180 Classic Grand Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI elegant type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 luxury model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 Entry Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 AvantgardeWagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K grace model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K sports car (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 grace model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 sports car (not current series)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_Vehicle_Note__c</fullName>
        <label>Interested Vehicle Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_Vehicle_Source__c</fullName>
        <label>Interested Vehicle Source</label>
        <picklist>
            <picklistValues>
                <fullName>0=Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>    
	<fields>
        <fullName>Interested_Vehicle_Tridion_Cell_Colour__c</fullName>
        <label>Interested Vehicle Tridion Cell Colour</label>
        <picklist>
            <controllingField>Interested_Vehicle_Brand__c</controllingField>
            <picklistValues>
                <fullName>40 Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>104 Cashmere yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>108 Grey reef</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>112 Paint, chromite black , metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170 Paint , columbium iron black , metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>182 Garnet black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>189 Dark green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>197 Obsidian Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>288 Basalt gray nappa leather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 Magnesiowustite malachite green , metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345 Dark blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>347 Blue Chalcedony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>349 Lapis blue metallic color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>353 Ore Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>354 Paint , carnelian red , metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>357 Luo Lite Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>359 Sapphire blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>368 Flint Grey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>370 Sulfur with lime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>474 Jewel Brown metallic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>480 Asbestos-Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>487 Placer gold Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>492 Paint，Rutile-Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>494 Paint，Germanium-lime，Metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5353 Paint，Tin-lead-blue，Metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5359 Paint，Sapphire blue，Metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>541 East Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>544 Jade Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>548 Amber red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>555 Sahara beige/Black Featured leather</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <description>/* 
Created by: Mouse Liu
Used by: Lead__c (US-Lead-13)
Function:  Indicate whether lead is active
Used in: Page Layouts, Reports

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <formula>IF (
    OR (

        AND (
             RecordType.Name == "Aftersales Leads",
             TEXT(CAC_Lead_Status__c) != "Purchased(Only Non BDC)",
             TEXT(CAC_Lead_Status__c) != "Lost(CAC)"
        ),

        AND (
             OR (
                 RecordType.Name == "Sales Leads",
                 RecordType.Name == "Sales Leads Soft Deleted"
                 ),
                 TEXT(CAC_Lead_Status__c) != "Purchased(Only Non BDC)",
                 TEXT(CAC_Lead_Status__c) != "Lost(CAC)"
        )
),

    'Active',
    'Inactive'
)</formula>
        <label>Is Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Assigned__c</fullName>
        <description>/* 
Created by: Mouse Liu
Used by: Lead__c (US-Lead-13)
Function:  Indicate whether lead is assigned to dealer
Used in: Page Layouts, Reports

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <formula>IF (
    AND (
        NOT(ISNULL(Assigned_Date_Time__c)),
        NOT(ISBLANK(Assigned_Date_Time__c))
    ),

    'Assigned',
    'Not Assigned'
)</formula>
        <label>Is Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Finance_Send_Email_Before_150_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>*Is Finance Send Email Before 150 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Finance_Send_Email_Before_15_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Finance Send Email Before 15 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Finance_Send_Email_Before_20_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Finance Send Email Before 20 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fleet_Send_Email_Before_150_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>*Is Fleet Send Email Before 150 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fleet_Send_Email_Before_15_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fleet Send Email Before 15 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fleet_Send_Email_Before_20_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fleet Send Email Before 20 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Qualify__c</fullName>
        <defaultValue>"Qualified"</defaultValue>
        <description>/* 
Created by: Mouse Liu
Used by: Lead__c (US-Lead-13)
Function:  Indicate whether lead is qualified
Used in: Page Layouts, Reports

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Is Qualify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Call__c</fullName>
        <label>Last Successful Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Additional_Service__c</fullName>
        <label>Lead Additional Service</label>
        <picklist>
            <picklistValues>
                <fullName>Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Car Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Wash</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_DataSource__c</fullName>
        <label>Lead DataSource</label>
        <picklist>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd party data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz driving Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends recommend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Searching engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_DataSubSource__c</fullName>
        <label>Lead DataSubSource</label>
        <picklist>
            <controllingField>Lead_DataSource__c</controllingField>
            <picklistValues>
                <fullName>Air China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jingdong mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taobao station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperation media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Coupe web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China telecom / 189 mailbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunhill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUGO BOSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axciom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weibo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeChat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz interactive community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sina Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart official website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bitauto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pcauto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baidu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoHu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Desired_Service__c</fullName>
        <label>Lead Desired Service</label>
        <picklist>
            <picklistValues>
                <fullName>Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>